Remove deprecated jvm opts